.metadata/.plugins/org.eclipse.cdt.ui/lista_enc_v3.build.log
21:35:57 **** Incremental Build of configuration Debug for project lista_enc_v3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\dados.o" "..\\src\\dados.c" 
In file included from ..\src\dados.c:4:0:
..\src\dados.h:17:1: error: unknown type name 'FILE'
 FILE* abre_arquivo(char *nome_arquivo);
 ^~~~
..\src\dados.h:19:26: error: unknown type name 'FILE'
 int conta_linhas_arquivo(FILE *fp);
                          ^~~~
..\src\dados.h:21:30: error: unknown type name 'FILE'
 void carrega_dados_estrutura(FILE *fp, dado_t *coleta, int n_linhas);
                              ^~~~
..\src\dados.h:25:21: error: unknown type name 'FILE'
 void libera_memoria(FILE *fp, dado_t *coleta, int n_linhas);
                     ^~~~
..\src\dados.c: In function 'ler_arquivo':
..\src\dados.c:31:16: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]
     FILE *fp = abre_arquivo("teste");
                ^~~~~~~~~~~~
..\src\dados.c:33:16: warning: implicit declaration of function 'conta_linhas_arquivo' [-Wimplicit-function-declaration]
     n_linhas = conta_linhas_arquivo(fp);
                ^~~~~~~~~~~~~~~~~~~~
..\src\dados.c:48:10: warning: unknown escape sequence: '\)'
     puts("Hello ;-\)");
          ^~~~~~~~~~~~
..\src\dados.c:29:9: warning: variable 'n_linhas' set but not used [-Wunused-but-set-variable]
     int n_linhas;
         ^~~~~~~~
..\src\dados.c:27:13: warning: unused variable 'dado' [-Wunused-variable]
     dado_t* dado;
             ^~~~
..\src\dados.c: In function 'imprimi_dados_lista':
..\src\dados.c:60:11: warning: unknown escape sequence: '\)'
      puts("Bye ;-\)");
           ^~~~~~~~~~
..\src\dados.c: At top level:
..\src\dados.c:122:7: error: conflicting types for 'abre_arquivo'
 FILE* abre_arquivo(char *nome_arq)
       ^~~~~~~~~~~~
In file included from ..\src\dados.c:4:0:
..\src\dados.h:17:7: note: previous declaration of 'abre_arquivo' was here
 FILE* abre_arquivo(char *nome_arquivo);
       ^~~~~~~~~~~~

21:35:58 Build Finished (took 616ms)

